# tender-engine

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.simple  ENV_SETUP.md  EU_TED_INTEGRATION_SUMMARY.md  README.md  REASONING_MODEL_README.md  app.py  app.simple.py  architecture-diagram.md  azure.yaml  company_profiles.json  main_app.py  pyproject.toml  reasoning_model.py  requirements.simple.txt  requirements.txt  test_crawler.py
agents/: company_agent.py  tender_agent.py
data/raw_tenders/: tender_006ca330f4d748acbad35312b5edf645.json  tender_1ad0ffe5a7e1421383eb5eaec0239e5a.json  tender_2adc8f85872440eda2f9c02c86af33a5.json  tender_7317a5aa9d6c48d384fb8db007a63132.json  tender_c34a9fe082cb4ad0bc97c998d742e212.json
data/vector_db/chroma.sqlite3/: chroma.sqlite3
data/vector_db/client_1745927225/: chroma.sqlite3
data/vector_db/client_1745927500/: chroma.sqlite3
data/vector_db/client_1745927635/: chroma.sqlite3
data/vector_db/client_1745928702/: chroma.sqlite3
data/vector_db/client_1745928704/: chroma.sqlite3
data/vector_db/client_1745928877/: chroma.sqlite3
data/vector_db/client_1745929223/: chroma.sqlite3
data/vector_db/client_1745929345/: chroma.sqlite3
data/vector_db/client_1745929417/: chroma.sqlite3
infra/: main.bicep  main.parameters.json  resources.bicep
llm/: azure_recommender_llm.py  recommender_llm.py
pages/: reasoning_model_approach.py  vector_approach.py
utils/: config.py  firecrawl_wrapper.py  tender_crawler.py
vectorstore/: chromadb_store.py  cosmos_vector_store.py
(+6 files in other folders)
